completed authentication with typescript
