# routes/auth.js
@@ -1,7 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const { authUser } = require("../controllers/auth");
-
-router.post("/", authUser);
-
-module.exports = router;
